packages/next-swc/crates/styled_jsx/tests/errors/ts-with-css-resolve/input.js
import css from 'styled-jsx/css'

export default css.resolve`
  .container {
    background: #000;
    color: white;
    font-weight: 700;
    height: 100px;
  }
`